--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Atoa\\Atoa\\": ""
+            "Atoa\\AtoaPayment\\": ""
         }
     }
 }
